# site-hugo

./: .gitignore  .gitmodules  README.md  _todo.md  hugo.toml  pyproject.toml  setup.py  themes
conda/: hugosite.yml
doc/: quarto.md  site.md
hugo/: hugo.toml  netlify.toml  themes
hugo/assets/css/: variables.scss
hugo/assets/css/color/: kanagawa.scss
hugo/content/: _index.md
hugo/content/blog/: _index.md
hugo/content/blog/causal-bayes-3-pillars/: index.md
hugo/content/blog/just-enough-conda/: index.md
hugo/content/blog/mandelbrot-recursive/: index.md
hugo/content/blog/median-voter/: index.md
hugo/content/blog/nonflat-priors/: index.md
hugo/content/blog/scrape-memoize-scum-data/: index.md
hugo/content/blog/sugar-free-dict-union/: index.md
hugo/content/blog/usable-research-repos/: index.md
hugo/content/post/: _index.md
hugo/layouts/partials/: extended_head.html  footer.html
hugo/resources/_gen/assets/css/: base.scss_983d0fd8c6b35648423ca86087665cef.content
hugo/themes/hugo-theme-re-terminal/: COMMUNITY-FEATURES.md  LICENSE.md  README.md  USERS.md  babel.config.js  config.toml  go.mod  package-lock.json  package.hugo.json  package.json  theme.toml
hugo/themes/hugo-theme-re-terminal/archetypes/: posts.md
hugo/themes/hugo-theme-re-terminal/assets/css/: banner.scss  buttons.scss  code.scss  font.scss  footer.scss  form.scss  gist.scss  header.scss  logo.scss  main.scss  menu.scss  pagination.scss  post.scss  prism.scss  style.scss  syntax.scss  terms.scss  variables.scss
hugo/themes/hugo-theme-re-terminal/assets/js/: banner.js  menu.js  prism.js
hugo/themes/hugo-theme-re-terminal/demoSite/: hugo.toml
hugo/themes/hugo-theme-re-terminal/demoSite/content/: about.md  showcase.md
hugo/themes/hugo-theme-re-terminal/layouts/: 404.html
hugo/themes/hugo-theme-re-terminal/layouts/_default/: baseof.html  index.html  list.html  rss.xml  single.html  term.html  terms.html
hugo/themes/hugo-theme-re-terminal/layouts/partials/: comments.html  comments_counter.html  cover.html  extended_footer.html  extended_head.html  footer.html  head.html  header.html  language-menu.html  (+6 more)
qmd/: _quarto.yml  index.qmd
qmd/blog/: index.qmd
scripts/: create-conda-env.sh  link-themes.sh
scripts/builder/: _links.py  main.py
src/: .gitignore  index.qmd
src/mkd/: __init__.py  _logging.py  app.py  links.py  logging.py  main.py  runners.py
src/mkd/bsky_utils/: __init__.py  __main__.py  bsky_session.py  git_log.py  post_git_log.py
(+13 files in other folders)
