[project]
name = "mikedecr-website"
description = "Personal website"
version = "0.1.0"
dependencies = [
    "quarto-cli == 1.6.*",
    "typer>=0.14.0",
    "hugo == 0.138.0",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.11"
# author = "Michael DeCrescenzo"
# Repository = "https://github.com/mikedecr/site-hugo"
# Issues = "https://github.com/mikedecr/site-hugo/issues"


[tool.uv]
package = true

[project.scripts]
mkd = "mkd.main:app"

# register symlinks
[mkd.hard_links.hugo]
themes = "submodules/themes"

[mkd.links.qmd.blog]
# multi-env-blog = "submodules/blog-monorepo/multi-env-blog"
causal-bayes-3-pillars = "submodules/blog-monorepo/causal-bayes-3-pillars"
scrape-memoize-scum-data = "submodules/blog-monorepo/scrape-memoize-scum-data"
nonflat-priors = "submodules/blog-monorepo/nonflat-priors"
usable-research-repos = "submodules/blog-monorepo/usable-research-repos"
median-voter = "submodules/blog-monorepo/plain-language-median-voter"
just-enough-conda = "submodules/blog-monorepo/just-enough-conda"
